<resources>
    <string name="app_name">PokemonGeo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pokedex">Pokedex</string>
    <string name="home">Home</string>
    <string name="inventory">Inventory</string>
    <string name="pokemon_captured">Pokemon Captured</string>
    <string name="map">Map</string>
    <string name="catchPokemon">Capture!</string>
    <string name="escape">Fuire</string>
    <string name="type">Type</string>
    <string name="weight">Poid</string>
    <string name="name">Nom</string>
    <string name="captureRate">Taux de capture</string>
    <string name="height">Taille</string>
    <string name="select_starter">Selectionne ton starter!</string>
</resources>